// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas componente <GifExpertApp /> Debe concordar con el smashShot 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategorias={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas componente <GifExpertApp /> Debe de mostrar un lista de categorias 1`] = `
<Fragment>
  <h2>
    GifExpertApp
  </h2>
  <AddCategory
    setCategorias={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="Wow"
      key="Wow"
    />
    <GifGrid
      category="divertido"
      key="divertido"
    />
  </ol>
</Fragment>
`;
